--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -59,6 +59,7 @@ file(GLOB TrIGA_ApplicationSource
   ${CMAKE_CURRENT_SOURCE_DIR}/TrIGA_main.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/utilities/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/solvers/*.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/modeler/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/io/*.cpp
 )
 ## TrIGA python interface sources
