--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         export CC=/usr/bin/gcc
         export CXX=/usr/bin/g++
-        # cp .github/workflows/configure.sh configure.sh
+        cp .github/workflows/configure.sh configure.sh
         bash configure.sh
     - name: Test
       shell: bash
