--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
         export CC=/usr/bin/gcc
         export CXX=/usr/bin/g++
         cp .github/workflows/configure.sh configure.sh
+        cd TIBRA
         bash configure.sh
 
     - name: Test
