--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         export CC=/usr/bin/gcc
         export CXX=/usr/bin/g++
         cp .github/workflows/configure.sh configure.sh
-        cd TIBRA
+        cd tibra
         bash configure.sh
 
     - name: Test
