--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,4 @@ jobs:
 
     - name: Test
       shell: bash
-      run: ./run_all_tests cpp
+      run: ./TestExecutables/test_embedding_operations
