--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,10 @@ jobs:
 
     - name: Test py
       shell: bash
-      run: python3 tibra/tests/test_tibra.py
+      run: |
+        export PYTHONPATH=${PYTHONPATH}:${GITHUB_WORKSPACE}
+        export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${GITHUB_WORKSPACE}/libs
+        python3 tibra/tests/test_tibra.py
 
     - name: Test cpp
       shell: bash
