--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         submodules: 'true'
 
     - name: Install Dependencies
-      run: sudo apt-get install -y libboost-test-dev libmpfr-dev python3-numpy python3-scipy
+      run: sudo apt-get install -y libboost-test-dev libmpfr-dev
 
     - name: Build
       shell: bash
@@ -41,6 +41,8 @@ jobs:
     - name: Test py
       shell: bash
       run: |
+        pip3 install numpy
+        pip3 install scipy
         export PYTHONPATH=${PYTHONPATH}:${GITHUB_WORKSPACE}
         export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${GITHUB_WORKSPACE}/libs
         python3 tibra/tests/test_tibra.py
