--- a/tibra/CMakeLists.txt
+++ b/tibra/CMakeLists.txt
@@ -53,6 +53,7 @@ file(GLOB TIBRA_ApplicationSource
   ${CMAKE_CURRENT_SOURCE_DIR}/solvers/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/io/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/modeler/*.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/cgal_wrapper/*.cpp
   # Add external libraries
   ${CMAKE_CURRENT_SOURCE_DIR}/../external_libraries/aabb_tree/*.cc
 )
