--- a/tibra/CMakeLists.txt
+++ b/tibra/CMakeLists.txt
@@ -55,6 +55,7 @@ file(GLOB TIBRA_ApplicationSource
   ${CMAKE_CURRENT_SOURCE_DIR}/quadrature/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/embedding/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/quadrature/integration_points_1d/*.cpp
+  ${CMAKE_CURRENT_SOURCE_DIR}/containers/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/solvers/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/io/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/modeler/*.cpp
