--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,10 +24,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        submodules: 'true'
+        submodules: 'false'
 
     - name: Install Dependencies
-      run: sudo apt-get install -y libboost-test-dev libmpfr-dev
+      run: sudo apt-get install -y libboost-test-dev
 
     - name: Build
       shell: bash
