--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 build/
 examples/cantilever/output/
 examples/stanford_bunny/output/
+examples/steering_knuckle/output/
 examples_test/
 kratos_interface/__pycache__/
 libs/
