--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ env:
   compiler: gcc
 
 jobs:
-  build:
+  ubuntu:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
@@ -50,4 +50,47 @@ jobs:
     - name: Test cpp
       shell: bash
       run: ./TestExecutables/test_tibra --log_level=test_suite
+
+  windows:
+    runs-on: windows-latest
+    env:
+      BUILD_TYPE: Release
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v1
+      with:
+        python-version: '3.6'
+
+    - name: Download boost
+      run: |
+        $url = "https://sourceforge.net/projects/boost/files/boost/1.74.0/boost_1_74_0.tar.gz/download"
+        (New-Object System.Net.WebClient).DownloadFile($url, "$env:TEMP\boost.tar.gz")
+        7z.exe x "$env:TEMP\boost.tar.gz" -o"$env:TEMP\boostArchive" -y | Out-Null
+        7z.exe x "$env:TEMP\boostArchive" -o"$env:TEMP\boost" -y | Out-Null
+        cd "$env:TEMP\boost"
+        bootstrap.bat
+        b2 address-model=64 architecture=x86 --with-test link=shared --prefix=boost_install install
+
+    - name: Installing dependencies
+      shell: cmd
+      run: |
+        pip install numpy
+        pip install scipy
+
+    - name: Build
+      shell: cmd
+      run: |
+        copy .\.github\workflows\configure.cmd
+        configure.cmd
+
+    - name: Running small tests
+      shell: cmd
+      run: |
+        export PYTHONPATH=${PYTHONPATH}:${GITHUB_WORKSPACE}
+        export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${GITHUB_WORKSPACE}/libs
+        set PYTHONPATH=%PYTHONPATH%;%GITHUB_WORKSPACE%
+        set PATH=%PATH%;%GITHUB_WORKSPACE%/libs
+        set PATH=%PATH%;$env:TEMP\boost\boost_install\lib
+        python kratos/python_scripts/run_tests.py -l small -c python
 
