--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,8 +66,8 @@ jobs:
       run: |
         $url = "https://sourceforge.net/projects/boost/files/boost/1.74.0/boost_1_74_0.tar.gz/download"
         (New-Object System.Net.WebClient).DownloadFile($url, "$env:TEMP\boost.tar.gz")
-        7z.exe x "$env:TEMP\boost.tar.gz" -o"$env:TEMP\boostArchive" -y | Out-Null
-        7z.exe x "$env:TEMP\boostArchive" -o"$env:TEMP\boost" -y | Out-Null
+        7z.exe x "$env:TEMP\boost.tar.gz" -o"\TEMP\boostArchive" -y | Out-Null
+        7z.exe x "\TEMP\boostArchive" -o"\TEMP\boost" -y | Out-Null
 
     - name: Build boost unit test framework
       shell: cmd
@@ -98,8 +98,8 @@ jobs:
         set PATH=%PATH%;\TEMP\boost\boost_install\lib
         py tibra/tests/test_tibra.py
 
-    - name: Test cpp
-      shell: cmd
-      run: "TestExecutables\Release\test_tibra.exe" --log_level=test_suite
+    # - name: Test cpp
+    #   shell: cmd
+    #   run: "TestExecutables\Release\test_tibra.exe" --log_level=test_suite
 
 
