--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
     - name: Build boost unit test framework
       shell: cmd
       run: |
-        cd \TEMP\boost
+        cd \TEMP\boost\boost_1_74_0
         bootstrap.bat
         b2 address-model=64 architecture=x86 --with-test link=shared --prefix=boost_install install
 
@@ -95,7 +95,7 @@ jobs:
         export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${GITHUB_WORKSPACE}/libs
         set PYTHONPATH=%PYTHONPATH%;%GITHUB_WORKSPACE%
         set PATH=%PATH%;%GITHUB_WORKSPACE%/libs
-        set PATH=%PATH%;\TEMP\boost\boost_install\lib
+        set PATH=%PATH%;\TEMP\boost\boost_1_74_0\boost_install\lib
         py tibra/tests/test_tibra.py
 
     # - name: Test cpp
