--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,7 +72,7 @@ jobs:
     - name: Build boost unit test framework
       shell: cmd
       run: |
-        call "cd \TEMP\boost\boost_1_74_0" || goto:error
+        call "cd \TEMP\boost" || goto:error
         set CC=cl.exe
         set CXX=cl.exe
         call "bootstrap.bat" || goto :error
@@ -93,8 +93,6 @@ jobs:
     - name: Test py
       shell: cmd
       run: |
-        export PYTHONPATH=${PYTHONPATH}:${GITHUB_WORKSPACE}
-        export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:${GITHUB_WORKSPACE}/libs
         set PYTHONPATH=%PYTHONPATH%;%GITHUB_WORKSPACE%
         set PATH=%PATH%;%GITHUB_WORKSPACE%/libs
         set PATH=%PATH%;\TEMP\boost\boost_1_74_0\boost_install\lib
