--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,7 +64,7 @@ jobs:
 
     - name: Download boost
       run: |
-        $url = "https://sourceforge.net/projects/boost/files/boost/1.74.0/boost_1_74_0.tar.gz/download"
+        $url = "https://sourceforge.net/projects/boost/files/boost/1.81.0/boost_1_81_0.tar.gz/download"
         (New-Object System.Net.WebClient).DownloadFile($url, "$env:TEMP\boost.tar.gz")
         7z.exe x "$env:TEMP\boost.tar.gz" -o"\TEMP\boostArchive" -y | Out-Null
         7z.exe x "\TEMP\boostArchive" -o"\TEMP\boost" -y | Out-Null
@@ -72,9 +72,10 @@ jobs:
     - name: Build boost unit test framework
       shell: cmd
       run: |
-        cd \TEMP\boost\boost_1_74_0 || goto:error
-        bootstrap.bat --with-toolset=clang-win || goto :error
-        b2 toolset=clang-win address-model=64 --with-test link=shared --prefix=boost_install install || goto:error
+        cd \TEMP\boost\boost_1_81_0 || goto:error
+        DIR
+        bootstrap.bat -|| goto :error
+        b2 address-model=64 architecture=x86 --with-test link=shared --prefix=boost_install install || goto:error
 
     - name: Installing dependencies
       shell: cmd
