--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,6 +72,7 @@ jobs:
     - name: Build boost unit test framework
       shell: cmd
       run: |
+        call "%ProgramFiles(x86)%\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64 || goto :error
         cd \TEMP\boost\boost_1_81_0 || goto:error
         DIR
         bootstrap.bat -|| goto :error
