--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,8 +66,8 @@ jobs:
       run: |
         $url = "https://sourceforge.net/projects/boost/files/boost/1.81.0/boost_1_81_0.tar.gz/download"
         (New-Object System.Net.WebClient).DownloadFile($url, "$env:TEMP\boost.tar.gz")
-        7z.exe x "$env:TEMP\boost.tar.gz" -o"\TEMP\boostArchive" -y | Out-Null
-        7z.exe x "\TEMP\boostArchive" -o"%GITHUB_WORKSPACE%\boost" -y | Out-Null
+        7z.exe x "$env:TEMP\boost.tar.gz" -o"%GITHUB_WORKSPACE%\boostArchive" -y | Out-Null
+        7z.exe x "%GITHUB_WORKSPACE%\boostArchive" -o"%GITHUB_WORKSPACE%\boost" -y | Out-Null
 
     - name: Build boost unit test framework
       shell: cmd
