--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
       shell: cmd
       run: |
 
-        cd "%TMP%\boost\boost_1_81_0 || goto:error
+        cd %TMP%\boost\boost_1_81_0 || goto:error
         bootstrap.bat || goto :error
         b2 address-model=64 architecture=x86 --with-test link=shared --prefix=boost_install install || goto:error
 
