--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,9 +65,9 @@ jobs:
     - name: Download boost
       run: |
         $url = "https://sourceforge.net/projects/boost/files/boost/1.74.0/boost_1_74_0.tar.gz/download"
-        (New-Object System.Net.WebClient).DownloadFile($url, "\TEMP\boost.tar.gz")
-        7z.exe x "\TEMP\boost.tar.gz" -o"\TEMP\boostArchive" -y | Out-Null
-        7z.exe x "\TEMP\boostArchive" -o"\TEMP\boost" -y | Out-Null
+        (New-Object System.Net.WebClient).DownloadFile($url, "$env:TEMP\boost.tar.gz")
+        7z.exe x "$env:TEMP\boost.tar.gz" -o"$env:TEMP\boostArchive" -y | Out-Null
+        7z.exe x "$env:TEMP\boostArchive" -o"$env:TEMP\boost" -y | Out-Null
 
     - name: Build boost unit test framework
       shell: cmd
@@ -75,7 +75,7 @@ jobs:
 
         cd %TEMP%\boost\boost_1_74_0 || goto:error
         bootstrap.bat || goto :error
-        b2 address-model=64 architecture=x86 --with-test link=shared --prefix=boost_install install || goto:error
+        b2 address-model=64 toolset=msvc architecture=x86 --with-test link=shared --prefix=boost_install install || goto:error
 
     - name: Installing dependencies
       shell: cmd
