--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,8 +98,7 @@ jobs:
       shell: cmd
       run: |
         set PYTHONPATH=%PYTHONPATH%;%GITHUB_WORKSPACE%
-        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs
-        set PATH=%PATH%;D:\TEMP\boost\boost_install\lib
+        set PATH=%PATH%;%GITHUB_WORKSPACE%/libs
         py tibra/tests/test_tibra.py
 
     - name: Test cpp
