--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
         echo %PYTHONPATH%
         echo %PATH%
         DIR
-        cd \libs
+        cd libs
         DIR
         py tibra/tests/test_tibra.py
 
