--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
     - name: Test py
       shell: cmd
       run: |
-        set PYTHONPATH=%PYTHONPATH%;%GITHUB_WORKSPACE%
+        set PYTHONPATH=%GITHUB_WORKSPACE%
         set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;D:\TEMP\boost\boost_install\lib
         echo %PYTHONPATH%
         echo %PATH%
