--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,20 +74,20 @@ jobs:
       run: |
         $url = "https://sourceforge.net/projects/boost/files/boost/1.81.0/boost_1_81_0.tar.gz/download"
         (New-Object System.Net.WebClient).DownloadFile($url, "$env:TEMP\boost.tar.gz")
-        7z.exe x "$env:TEMP\boost.tar.gz" -o"\TEMP\boostArchive" -y | Out-Null
-        7z.exe x "\TEMP\boostArchive" -o"\TEMP\boost" -y | Out-Null
+        7z.exe x "$env:TEMP\boost.tar.gz" -o"%TEMP%\boostArchive" -y | Out-Null
+        7z.exe x "%TEMP%\boostArchive" -o"%TEMP%\boost" -y | Out-Null
 
 
     - name: Configure boost unit test framework
       shell: cmd
       run: |
-        cd D:\TEMP\boost\boost_1_81_0 || goto:error
+        cd %TEMP%\boost\boost_1_81_0 || goto:error
         bootstrap.bat || goto :error
 
     - name: Build boost unit test framework
       shell: cmd
       run: |
-        cd D:\TEMP\boost\boost_1_81_0
+        cd %TEMP%\boost\boost_1_81_0
         b2 address-model=64 architecture=x86 toolset=msvc --with-test link=shared --prefix=boost_install install || goto:error
 
     - name: Installing dependencies
@@ -106,11 +106,13 @@ jobs:
       shell: cmd
       run: |
         set PYTHONPATH=%PYTHONPATH%;%GITHUB_WORKSPACE%
-        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;D:\TEMP\boost\boost_install\lib
+        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;%TEMP%\boost\boost_install\lib
         python tibra/tests/test_tibra.py
 
     - name: Test cpp
       shell: cmd
-      run: start "TestExecutables\Release\test_tibra.exe" --log_level=test_suite
+      run: |
+        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;%TEMP%\boost\boost_install\lib
+        start "TestExecutables\Release\test_tibra.exe" --log_level=test_suite
 
 
