--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,7 @@ jobs:
       shell: cmd
       run: |
         set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;D:\TEMP\boost\boost_install\lib
-        start TestExecutables\Release\test_tibra.exe
+        DIR
+        .\TestExecutables\Release\test_tibra.exe
 
 
