--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,8 +112,8 @@ jobs:
     - name: Test cpp
       shell: cmd
       run: |
-        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;D:\TEMP\boost\boost_install\lib
+        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;D:\TEMP\boost\boost_install\lib;D:\TEMP\boost
         DIR
-        .\TestExecutables\Release\test_tibra.exe
+        .\TestExecutables\Release\test_tibra.exe || goto:error
 
 
