--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,7 @@ jobs:
         echo %GITHUB_WORKSPACE%
         echo %RUNNER_TEMP%
         cd C:\Users\RUNNER~1
+        cd  \%TEMP%
         python --version
 
     - name: Download boost
