--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -82,14 +82,13 @@ jobs:
     - name: Configure boost unit test framework
       shell: cmd
       run: |
-        cd C:\Users
-        cd %TEMP%\boost\boost_1_81_0 || goto:error
+        cd "%TEMP%\boost\boost_1_74_0" || goto:error
         bootstrap.bat || goto :error
 
     - name: Build boost unit test framework
       shell: cmd
       run: |
-        cd %TEMP%\boost\boost_1_81_0
+        cd "%TEMP%\boost\boost_1_74_0"
         b2 address-model=64 architecture=x86 toolset=msvc --with-test link=shared --prefix=boost_install install || goto:error
 
     - name: Installing dependencies
@@ -114,7 +113,7 @@ jobs:
     - name: Test cpp
       shell: cmd
       run: |
-        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;D:\TEMP\boost\boost_install\lib;D:\TEMP\boost
+        set PATH=%PATH%;%GITHUB_WORKSPACE%\libs;%TEMP%\boost\boost_1_74_0\boost_install\lib
         DIR
         call "TestExecutables\Release\test_tibra.exe" || goto:error
 
