--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,9 +66,7 @@ jobs:
       shell: cmd
       run: |
         echo %TEMP%
-        echo %GITHUB_WORKSPACE%
-        echo %RUNNER_TEMP%
-        cd  "%TEMP%"
+        echo $env:TEMP
         python --version
 
     - name: Download boost
@@ -82,13 +80,13 @@ jobs:
     - name: Configure boost unit test framework
       shell: cmd
       run: |
-        cd "%TEMP%\boost\boost_1_74_0" || goto:error
+        cd "$env:TEMP\boost\boost_1_74_0" || goto:error
         bootstrap.bat || goto :error
 
     - name: Build boost unit test framework
       shell: cmd
       run: |
-        cd "%TEMP%\boost\boost_1_74_0"
+        cd "$env:TEMP\boost\boost_1_74_0"
         b2 address-model=64 architecture=x86 toolset=msvc --with-test link=shared --prefix=boost_install install || goto:error
 
     - name: Installing dependencies
