--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,23 +73,23 @@ jobs:
       run: |
         $url = "https://boostorg.jfrog.io/artifactory/main/release/1.74.0/source/boost_1_74_0.tar.gz"
         (New-Object System.Net.WebClient).DownloadFile($url, "$env:TEMP\boost.tar.gz")
-        7z.exe x "$env:TEMP\boost.tar.gz" -o"$env:TEMP\boostArchive" -y | Out-Null
-        7z.exe x "$env:TEMP\boostArchive" -o"$env:TEMP\boost" -y | Out-Null
+        7z.exe x "$env:TEMP\boost.tar.gz" -o"$env:RUNNER_TEMP\boostArchive" -y | Out-Null
+        7z.exe x "$env:RUNNER_TEMP\boostArchive" -o"$env:RUNNER_TEMP\boost" -y | Out-Null
 
 
     - name: Configure boost unit test framework
       shell: cmd
       run: |
-        cd "%TEMP%"
+        cd "%RUNNER_TEMP%"
         DIR
-        cd "%TEMP%\boost\boost_1_74_0" || goto:error
+        cd "%RUNNER_TEMP%\boost\boost_1_74_0" || goto:error
         DIR
         bootstrap.bat || goto :error
 
     - name: Build boost unit test framework
       shell: cmd
       run: |
-        cd "$env:TEMP\boost\boost_1_74_0"
+        cd "$RUNNER_TEMP\boost\boost_1_74_0"
         b2 address-model=64 architecture=x86 toolset=msvc --with-test link=shared --prefix=boost_install install || goto:error
 
     - name: Installing dependencies
